 > onPlayerStoppedUsing(ItemStack stack, World worldIn, EntityPlayer playerIn, int timeLeft)
 > onItemUseFinish(ItemStack stack, World worldIn, EntityPlayer playerIn)
- Shield Belt model
- Translator model

Changelog:
==========

0.2.0.20
---
[Addition][Config] Config options for items that cause potion effects when in the inventory
[Removal][Recipe] Removed cheaper UUTC recipe

0.2.0.19
---
[Addition] Translocator Disc will break when in lava or on fire
[Bugfix] Translocator sometimes didn't teleport correctly

0.2.0.18
---
[Recipe][Balance] Recipe rebalancing
[Change][Internal] Force Field Tweaks
[Change] Translocator Disc renders correctly

0.2.0.17
---
[Bugfix] Translocator no longer recalls for spectators
[Bugfix] Misc recipe fixes
[Addition] Translocator Disc renders (may need tweaking)
[Change] Changes to how items with durability can be recharged

0.2.0.16
---
[Addition] Compresed Apples
[Change] Translocator rendering tweaks

0.2.0.15
---
[Addition] Translocator fully implemented
[Change] Buff to Slime armor
[Change] Tweak to Force Field
[Addition] Metal tools can be ground into their respective dusts

0.2.0.14
---
[Addition] Metal armors can be ground into their respective dusts
[Change] Tweaks to Translocator Disc

0.2.0.13
---
[Addition] Black Slimeball and Slime Block
[Addition] Config option for cheaper Health Buckets
[Bugfix] Toxin Suit not being destroyed fixed
[Change] Buffed Titanium armor durability
[Addition] Gave some wooden items from vanilla burn times in furnace

0.2.0.12
---
[Change] More sound tweaks
[Addition] Invisibility Item and Recipe

0.2.0.11
---
[Addition] Armor Textures
[Addition] Super Health Item and Recipe

0.2.0.10
---
[Change] Misc recipe tweaks
[Addition] Weapon sounds! (for some at least)
[Change] Tweaks to weapon data
[Bug] Weapons bounce around in your hand in first person when you fire them 

0.2.0.9
---
[Change] Fixed ItemBlocks, no separate items for the ItemBlocks now